--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@arco-design/web-react": "^2.62.1",
     "@sumsub/websdk": "^2.2.1",
     "@sumsub/websdk-react": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
